Remove empty speech rows from dataframe

--- a/Scraping Code(pickspresident).ipynb
+++ b/Scraping Code(pickspresident).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,18 +20,12 @@
     "\n",
     "#This is what we will change if we want the whole data. Right now it only runs for 44th president\n",
     "\n",
-    "for i in range(43,44):\n",
+    "for i in range(30,31):\n",
     "    x = i\n",
     "    absolutepath_president = f'/html/body/div[2]/div/main/div[2]/div/div[2]/article/div/div[2]/div/div/div/form/div[3]/fieldset/div/div/div/div[{x}]/label'\n",
     "    president1 = browser.find_element_by_xpath(absolutepath_president)\n",
     "    president1.click()\n",
     "    time.sleep(2)\n",
-    "\n",
-    "\n",
-    "# president = browser.find_element_by_xpath(\n",
-    "#     '/html/body/div[2]/div/main/div[2]/div/div[2]/article/div/div[2]/div/div/div/form/div[3]/fieldset/div/div/div/div[42]/label')\n",
-    "# president.click()\n",
-    "\n",
     "\n",
     "\n",
     "\n",
@@ -57,12 +51,12 @@
     "        break\n",
     "    last_height = new_height\n",
     "\n",
-    "soup = BeautifulSoup(browser.page_source, 'lxml')    "
+    "soup = BeautifulSoup(browser.page_source, 'lxml')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -70,56 +64,35 @@
      "output_type": "stream",
      "text": [
       "        dates                                           speeches\n",
-      "0  2016-05-15  [Hello Rutgers!  (Applause.)  R-U rah-rah!  (A...\n",
-      "1  2016-03-22  [Thank you.  (Applause.)  Muchas gracias.  Tha...\n",
-      "2  2016-01-12  [Mr. Speaker, Mr. Vice President, Members of C...\n",
-      "3  2015-06-26  [THE PRESIDENT:  Giving all praise and honor t...\n",
-      "4  2015-03-07  [UDIENCE MEMBER:  We love you, President Obama...\n",
-      "5  2015-01-20  [Mr. Speaker, Mr. Vice President, Members of C...\n",
-      "6  2014-11-20  [My fellow Americans, tonight, I’d like to tal...\n",
-      "7  2014-01-28  [Mr. Speaker, Mr. Vice President, Members of C...\n",
-      "8  2013-12-04  [Thank you.  (Applause.)  Thank you, everybody...\n",
-      "9  2013-09-10  [My fellow Americans, tonight I want to talk t...\n",
-      "10 2013-07-24  [Hello, Warrensburg!  (Applause.)  Hello, Mule...\n",
-      "11 2013-07-19  [I wanted to come out here, first of all, to t...\n",
-      "12 2013-04-08  [Hello, Connecticut.  (Applause.)  Thank you. ...\n",
-      "13 2013-03-21  [Thank you.  (Applause.)  Thank you so much. W...\n",
-      "14 2013-03-01  [Good morning, everybody.  As you know, I just...\n",
-      "15 2013-02-13  [Mr. Speaker, Mr. Vice President, members of C...\n",
-      "16 2013-01-29  [Thank you!  (Applause.)  Thank you!  Thank yo...\n",
-      "17 2013-01-21  [Vice President Biden, Mr. Chief Justice,membe...\n",
-      "18 2012-12-16  [Thank you.  (Applause.)  Thank you, Governor....\n",
-      "19 2012-11-06  [Tonight, more than 200 years after a former c...\n",
-      "20 2012-09-06  [THE PRESIDENT:  Thank you.  (Applause.)  Than...\n",
-      "21 2012-01-24  [ Mr. Speaker, Mr. Vice President, members of ...\n",
-      "22 2011-10-21  [Good afternoon, everybody.  As a candidate fo...\n",
-      "23 2011-09-08  [Mr. Speaker, Mr. Vice President, members of C...\n",
-      "24 2011-06-22  [Good evening.  Nearly 10 years ago, America s...\n",
-      "25 2011-05-25  [Thank you very much.  Thank you.  (Applause.)...\n",
-      "26 2011-05-19  [Thank you.  Thank you.  (Applause.)  Thank yo...\n",
-      "27 2011-05-01  [ood evening.  Tonight, I can report to the Am...\n",
-      "28 2011-01-25  [Mr. Speaker, Mr. Vice President, members of C...\n",
-      "29 2011-01-12  [Thank you.  (Applause.)  Thank you very much....\n",
-      "30 2010-11-03  [THE PRESIDENT: Good afternoon, everybody.  La...\n",
-      "31 2010-09-23  [THE PRESIDENT:  Mr. President, Mr. Secretary-...\n",
-      "32 2010-08-31  [Good evening.  Tonight, I’d like to talk to y...\n",
-      "33 2010-06-15  [Good evening.  As we speak, our nation faces ...\n",
-      "34 2010-04-28  [Thank you very much.  Everybody, please have ...\n",
-      "35 2010-04-15  [Thank you, everybody. Thank you. (Applause.) ...\n",
-      "36 2010-03-15  [THE PRESIDENT:  Hello, Ohio!  (Applause.)  It...\n",
-      "37 2010-02-09  [THE PRESIDENT:  Hello, everybody.  I am glad ...\n",
-      "38 2010-01-27  [Madam Speaker, Vice President Biden, Members ...\n",
-      "39 2009-12-10  [Your Majesties, Your Royal Highnesses, distin...\n",
-      "40 2009-12-01  [Good evening.  To the United States Corps of ...\n",
-      "41 2009-09-09  [Madam Speaker, Vice President Biden, Members ...\n",
-      "42 2009-06-04  [Thank you so much. Good afternoon. I am honor...\n",
-      "43 2009-05-26  [Thank you.  Well, I'm excited, too.  (Laughte...\n",
-      "44 2009-02-24  [Madam Speaker, Mr. Vice President, Members of...\n",
-      "45 2009-02-07  [Thank you, everybody.  Please have a seat.  Y...\n",
-      "46 2009-01-29  [It is fitting that with the very first bill I...\n",
-      "47 2009-01-20  [I stand here today humbled by the task before...\n",
-      "48 2008-11-04  [If there is anyone out there who still doubts...\n",
-      "49 2008-08-28  [To Chairman Dean and my great friend Dick Dur...\n"
+      "0  1932-12-06  [To the Senate and House of Representatives:In...\n",
+      "1  1932-11-05  [In these closing hours of the campaign I am c...\n",
+      "3  1932-10-21  [This campaign is more than a contest between ...\n",
+      "4  1932-08-11  [Mr. Chairman and my fellow citizens:In accept...\n",
+      "5  1932-05-31  [AN EMERGENCY has developed in the last few da...\n",
+      "6  1931-12-11  [THE PRESIDENT said:\"In my recommendations to ...\n",
+      "7  1931-12-08  [To the Senate and House of Representatives:It...\n",
+      "8  1931-10-18  [My fellow citizens:This broadcast tonight mar...\n",
+      "9  1931-09-22  [GREAT BRITAIN'S DEPARTURE FROM THE GOLD STAND...\n",
+      "10 1931-06-21  [THE PRESIDENT made the following statement:Th...\n",
+      "11 1931-02-26  [To the House of Representatives:I return here...\n",
+      "12 1931-02-03  [THE PRESIDENT said:Certain Senators have issu...\n",
+      "13 1930-12-09  [THE PRESIDENT said:\"I observe that measures h...\n",
+      "14 1930-12-02  [To the Senate and House of Representatives:I ...\n",
+      "15 1930-10-02  [Members of the American Bankers Association a...\n",
+      "16 1930-07-07  [To the Senate:In requesting the Senate to con...\n",
+      "17 1930-06-16  [I SHALL approve the tariff bill. This legisla...\n",
+      "18 1930-04-28  [In my messages of June 6th and December 3rd, ...\n",
+      "19 1930-03-07  [\"The Departments of Commerce and Labor are en...\n",
+      "20 1929-12-03  [To the Senate and House of Representatives:Th...\n",
+      "21 1929-11-19  [THE ECONOMY AND PUBLIC CONFIDENCEWe are deali...\n",
+      "22 1929-11-05  [THE NATIONAL ECONOMIC CONDITIONTHE PRESIDENT....\n",
+      "23 1929-10-25  [IN REPLY to press questions as to the busines...\n",
+      "24 1929-09-18  [My countrymen and women of the radio audience...\n",
+      "25 1929-07-24  [IN APRIL 1928, as a result of discussions bet...\n",
+      "26 1929-07-24  [IN APRIL 1928, as a result of discussions bet...\n",
+      "27 1929-06-11  [THE VOTE in the Senate today at best adds fur...\n",
+      "28 1929-03-04  [My Countrymen: This occasion is not alone the...\n",
+      "29 1928-10-22  [This campaign now draws near a close. The pla...\n"
      ]
     }
    ],
@@ -129,6 +102,7 @@
     "from datetime import datetime\n",
     "import time\n",
     "import string\n",
+    "import numpy as np\n",
     "\n",
     "link_str = []\n",
     "\n",
@@ -145,21 +119,17 @@
     "        \n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "http = urllib3.PoolManager()\n",
     "list2=[]\n",
+    "president_names=[]\n",
     "for element in new_link_str:\n",
     "    url = \"http://millercenter.org\" + element\n",
     "#     print(element)\n",
     "    response = http.request('GET', url)\n",
     "    soup_2 = BeautifulSoup(response.data, 'lxml')\n",
     "    list2.append(soup_2.findAll('div', {\"class\":\"transcript-inner\"}))\n",
+    "    president_names.append(soup_2.findAll('div', {\"class\":\"president-name\"}))\n",
     "    \n",
-    "#     if soup_2.findAll('div', {\"class\":\"transcript-inner\"})=='0':\n",
-    "#         list2.append(soup_2.findAll('div', {\"class\":\"transcript-inner\"}))\n",
-    "#     else:\n",
-    "#         list2.append(soup_2.findAll('div', {\"class\":\"view-transcript\"}))\n",
     "\n",
     "\n",
     "#converting into string due to weird beautifulsoup output    \n",
@@ -169,7 +139,7 @@
     "        list3.append(str(list2[i]))\n",
     "    else:\n",
     "        \n",
-    "        #add comments for why I had\n",
+    "        #add comments for why I had to do it like this\n",
     "        \n",
     "        url = \"http://millercenter.org\" + new_link_str[i]\n",
     "        response = http.request('GET', url)\n",
@@ -214,6 +184,21 @@
     "\n",
     "df = pd.DataFrame({'dates':speech_dates, 'speeches':cleaned_speeches})\n",
     "\n",
+    "#this part is added because dataframe does not recognize [] as an empty input. \n",
+    "\n",
+    "df['speeches'].replace('[]', np.nan, inplace=True)\n",
+    "\n",
+    "#now that I replaced [] with NaN, I can simply say drop all the rows with NaN elements\n",
+    "\n",
+    "df.dropna(subset=['speeches'], inplace=True)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# for i in range(len(Speeches)): \n",
+    "#     if df[df.nameindex[i]==[]:\n",
+    "#         df.drop(df.index[i])\n",
+    "        \n",
     "print(df)\n",
     "\n",
     "\n"
