--- a/Scraping Code(pickspresident).ipynb
+++ b/Scraping Code(pickspresident).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "\n",
     "#This is what we will change if we want the whole data. Right now it only runs for 44th president\n",
     "\n",
-    "for i in range(30,31):\n",
+    "for i in range(40,41):\n",
     "    x = i\n",
     "    absolutepath_president = f'/html/body/div[2]/div/main/div[2]/div/div[2]/article/div/div[2]/div/div/div/form/div[3]/fieldset/div/div/div/div[{x}]/label'\n",
     "    president1 = browser.find_element_by_xpath(absolutepath_president)\n",
@@ -56,43 +56,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        dates                                           speeches\n",
-      "0  1932-12-06  [To the Senate and House of Representatives:In...\n",
-      "1  1932-11-05  [In these closing hours of the campaign I am c...\n",
-      "3  1932-10-21  [This campaign is more than a contest between ...\n",
-      "4  1932-08-11  [Mr. Chairman and my fellow citizens:In accept...\n",
-      "5  1932-05-31  [AN EMERGENCY has developed in the last few da...\n",
-      "6  1931-12-11  [THE PRESIDENT said:\"In my recommendations to ...\n",
-      "7  1931-12-08  [To the Senate and House of Representatives:It...\n",
-      "8  1931-10-18  [My fellow citizens:This broadcast tonight mar...\n",
-      "9  1931-09-22  [GREAT BRITAIN'S DEPARTURE FROM THE GOLD STAND...\n",
-      "10 1931-06-21  [THE PRESIDENT made the following statement:Th...\n",
-      "11 1931-02-26  [To the House of Representatives:I return here...\n",
-      "12 1931-02-03  [THE PRESIDENT said:Certain Senators have issu...\n",
-      "13 1930-12-09  [THE PRESIDENT said:\"I observe that measures h...\n",
-      "14 1930-12-02  [To the Senate and House of Representatives:I ...\n",
-      "15 1930-10-02  [Members of the American Bankers Association a...\n",
-      "16 1930-07-07  [To the Senate:In requesting the Senate to con...\n",
-      "17 1930-06-16  [I SHALL approve the tariff bill. This legisla...\n",
-      "18 1930-04-28  [In my messages of June 6th and December 3rd, ...\n",
-      "19 1930-03-07  [\"The Departments of Commerce and Labor are en...\n",
-      "20 1929-12-03  [To the Senate and House of Representatives:Th...\n",
-      "21 1929-11-19  [THE ECONOMY AND PUBLIC CONFIDENCEWe are deali...\n",
-      "22 1929-11-05  [THE NATIONAL ECONOMIC CONDITIONTHE PRESIDENT....\n",
-      "23 1929-10-25  [IN REPLY to press questions as to the busines...\n",
-      "24 1929-09-18  [My countrymen and women of the radio audience...\n",
-      "25 1929-07-24  [IN APRIL 1928, as a result of discussions bet...\n",
-      "26 1929-07-24  [IN APRIL 1928, as a result of discussions bet...\n",
-      "27 1929-06-11  [THE VOTE in the Senate today at best adds fur...\n",
-      "28 1929-03-04  [My Countrymen: This occasion is not alone the...\n",
-      "29 1928-10-22  [This campaign now draws near a close. The pla...\n"
+      "        dates                                           speeches  \\\n",
+      "0  1993-01-05  [Thank you all very much. Good luck. Please be...   \n",
+      "1  1992-12-15  [Thank you all for that welcome back. Thank yo...   \n",
+      "2  1992-12-04  [I want to talk to you today about the tragedy...   \n",
+      "3  1992-10-11  [Jim Lehrer. Good evening, and welcome to the ...   \n",
+      "4  1992-08-20  [Thank you all very much. Thank you, thank you...   \n",
+      "5  1992-01-28  [Mr. Speaker and Mr. President, distinguished ...   \n",
+      "6  1991-07-31  [President Gorbachev. Good evening, ladies and...   \n",
+      "7  1991-03-06  [Mr. President. And Mr. Speaker, thank you, si...   \n",
+      "8  1991-02-27  [Kuwait is liberated. Iraq's army is defeated....   \n",
+      "9  1991-01-29  [Mr. President and Mr. Speaker and members of ...   \n",
+      "10 1991-01-16  [Just 2 hours ago, allied air forces began an ...   \n",
+      "11 1990-10-02  [Tonight I want to talk to you about a problem...   \n",
+      "12 1990-10-01  [Mr. President, thank you very much. Mr. Secre...   \n",
+      "13 1990-09-11  [Mr. President and Mr. Speaker and Members of ...   \n",
+      "14 1990-08-08  [In the life of a nation, we're called upon to...   \n",
+      "15 1990-07-26  [Evan, thank you so much. And welcome to every...   \n",
+      "16 1990-01-31  [Mr. President, Mr. Speaker, members of the Un...   \n",
+      "17 1989-12-20  [My fellow citizens, last night I ordered U.S....   \n",
+      "18 1989-05-12  [Thank you, Governor. Thank you all very much ...   \n",
+      "19 1989-02-09  [Mr. Speaker, Mr. President, and distinguished...   \n",
+      "20 1989-01-20  [Mr. Chief Justice, Mr. President, Vice Presid...   \n",
+      "21 1988-09-25  [JIM LEHRER: Good evening. On behalf of the Co...   \n",
+      "22 1988-08-18  [I have many friends to thank tonight. I thank...   \n",
+      "\n",
+      "            president  \n",
+      "0   George H. W. Bush  \n",
+      "1   George H. W. Bush  \n",
+      "2   George H. W. Bush  \n",
+      "3   George H. W. Bush  \n",
+      "4   George H. W. Bush  \n",
+      "5   George H. W. Bush  \n",
+      "6   George H. W. Bush  \n",
+      "7   George H. W. Bush  \n",
+      "8   George H. W. Bush  \n",
+      "9   George H. W. Bush  \n",
+      "10  George H. W. Bush  \n",
+      "11  George H. W. Bush  \n",
+      "12  George H. W. Bush  \n",
+      "13  George H. W. Bush  \n",
+      "14  George H. W. Bush  \n",
+      "15  George H. W. Bush  \n",
+      "16  George H. W. Bush  \n",
+      "17  George H. W. Bush  \n",
+      "18  George H. W. Bush  \n",
+      "19  George H. W. Bush  \n",
+      "20  George H. W. Bush  \n",
+      "21  George H. W. Bush  \n",
+      "22  George H. W. Bush  \n"
      ]
     }
    ],
@@ -103,6 +122,8 @@
     "import time\n",
     "import string\n",
     "import numpy as np\n",
+    "\n",
+    "\n",
     "\n",
     "link_str = []\n",
     "\n",
@@ -128,7 +149,7 @@
     "    response = http.request('GET', url)\n",
     "    soup_2 = BeautifulSoup(response.data, 'lxml')\n",
     "    list2.append(soup_2.findAll('div', {\"class\":\"transcript-inner\"}))\n",
-    "    president_names.append(soup_2.findAll('div', {\"class\":\"president-name\"}))\n",
+    "    president_names.append(soup_2.find('p', {\"class\":\"president-name\"}).get_text(strip=True))\n",
     "    \n",
     "\n",
     "\n",
@@ -182,7 +203,7 @@
     "    speech_dates[i] = datetime.strptime(speech_dates[i], '%B-%d-%Y')\n",
     "\n",
     "\n",
-    "df = pd.DataFrame({'dates':speech_dates, 'speeches':cleaned_speeches})\n",
+    "df = pd.DataFrame({'dates':speech_dates, 'speeches':cleaned_speeches, 'president':president_names})\n",
     "\n",
     "#this part is added because dataframe does not recognize [] as an empty input. \n",
     "\n",
@@ -193,14 +214,8 @@
     "df.dropna(subset=['speeches'], inplace=True)\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "# for i in range(len(Speeches)): \n",
-    "#     if df[df.nameindex[i]==[]:\n",
-    "#         df.drop(df.index[i])\n",
     "        \n",
     "print(df)\n",
-    "\n",
     "\n"
    ]
   },
