Add full data pkl

--- a/Master Code - Annotated.ipynb
+++ b/Master Code - Annotated.ipynb
@@ -408,7 +408,7 @@
     "dates = []\n",
     "for i in range(len(fin_data.Date)):\n",
     "    dates.append(datetime.strptime(fin_data.Date[i], '%m/%d/%Y'))\n",
-    "    dates[i] = datetime.date(dates[i])\n",
+    "    dates[i] = datetime.da(dates[i])\n",
     "fin_data.Date = dates\n",
     "\n",
     "\n",
