add scores with party

--- a/marty Scraping.ipynb
+++ b/marty Scraping.ipynb
@@ -75,6 +75,7 @@
     "    for i in range(len(df.president)):\n",
     "        parties.append(party_from_pres(df.president[i]))\n",
     "    df.party = parties\n",
+    "    df.to_pickle('./')\n",
     "    dates = []\n",
     "    for i in range(len(df.dates)):\n",
     "        dates.append(df.dates[i] + timedelta(days = 1))\n",
