--- a/Final Data Acquisition.ipynb
+++ b/Final Data Acquisition.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "#converting into string due to weird beautifulsoup output    \n",
     "str_raw_speeches\n",
-    "for i in range(len(list2)):\n",
+    "for i in range(len(raw_speeches)):\n",
     "    if raw_speeches[i]:\n",
     "        str_raw_speeches.append(str(raw_speeches[i]))\n",
     "    else:\n",
