Add regression and change name of Final Data Merge

--- a/Final Data Merge.ipynb
+++ b/Final Data Merge.ipynb
@@ -2,28 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'R'"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sympy import Piecewise\n",
-    "import numpy\n",
-    "from sympy.utilities.lambdify import lambdify\n",
-    "from sympy.abc import x\n",
-    "from datetime import date\n",
-    "import re\n",
-    "import pandas as pd\n",
     "def party_from_pres(president):\n",
     "    if president == 'Theodore Roosevelt' or president == 'William Taft' or president == 'Warren G. Harding' or president == 'Calvin Coolidge' or president == 'Herbert Hoover' or president == 'Dwight D. Eisenhower' or president == 'Richard Nixon' or president == 'Gerald Ford' or president == 'Ronald Reagan' or president == 'Ronald Reagan' or president == 'George H. W. Bush' or president == 'George W. Bush' or president == 'Donald Trump':\n",
     "        return \"R\"\n",
@@ -42,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +57,7 @@
     "    for i in range(len(df.president)):\n",
     "        parties.append(party_from_pres(df.president[i]))\n",
     "    df.party = parties\n",
-    "    df.to_pickle('./')\n",
+    "    df.to_pickle('./scores_data_with_party.pkl')\n",
     "    dates = []\n",
     "    for i in range(len(df.dates)):\n",
     "        dates.append(df.dates[i] + timedelta(days = 1))\n",
@@ -88,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 117,
    "metadata": {
     "scrolled": true
    },
