Add comments to Final Data Acquisition

--- a/Final Data Acquisition.ipynb
+++ b/Final Data Acquisition.ipynb
@@ -21,7 +21,7 @@
     "SCROLL_PAUSE_TIME = 2\n",
     "\n",
     "\n",
-    "#slight changes to be made!!\n",
+    "\n",
     "\n",
     "# Get scroll height\n",
     "last_height = browser.execute_script(\"return document.body.scrollHeight\")\n",
@@ -63,10 +63,10 @@
     "    if link != None:\n",
     "        all_hyperlinks.append(link['href'])\n",
     "\n",
-    "# now I want the link strings containting /the-presidency/\n",
+    "# now I want the link strings containting /the-presidency/ within the list all_hyperlinks\n",
     "speech_links = []\n",
     "\n",
-    "for element in link_str:\n",
+    "for element in all_hyperlinks:\n",
     "    if element.find(\"/presidential-speeches/\") >= 0: \n",
     "        speech_links.append(element)\n",
     "        \n",
@@ -84,7 +84,8 @@
     "    \n",
     "\n",
     "\n",
-    "#converting into string due to weird beautifulsoup output    \n",
+    "#converting into string due to weird beautifulsoup output \n",
+    "\n",
     "str_raw_speeches\n",
     "for i in range(len(raw_speeches)):\n",
     "    if raw_speeches[i]:\n",
@@ -92,13 +93,14 @@
     "    else:\n",
     "        \n",
     "        #This extra step was done to deal with an inconsistency in the website. More information will be included in the readme\n",
+    "        \n",
     "        url = \"http://millercenter.org\" + speech_links[i]\n",
     "        response = http.request('GET', url)\n",
     "        soup_2 = BeautifulSoup(response.data, 'lxml')\n",
     "        raw_speeches.append(str(soup_2.findAll('div', {\"class\":\"view-transcript\"})))\n",
     "\n",
     "\n",
-    "#this will be used to clean the text from html tags\n",
+    "#This will be used to clean the text from html tags\n",
     "def tag_cleanr(text):\n",
     "    cleanr = re.compile('<.*?>')\n",
     "    cleantext = re.sub(cleanr, '', text)\n",
@@ -106,7 +108,7 @@
     "\n",
     "cleaned_speeches = []\n",
     "\n",
-    "#these replace lines could and should be replaced with regex since we covered that in the syllabus more extensively\n",
+    "#These replace lines could and should be replaced with regex since we covered that in the syllabus more extensively but this works\n",
     "\n",
     "for i in range(len(str_raw_speeches)):\n",
     "    x = tag_cleanr(str_raw_speeches[i])\n",
