--- a/Word Cloud Analysis.ipynb
+++ b/Word Cloud Analysis.ipynb
@@ -104,6 +104,9 @@
    "outputs": [],
    "source": [
     "# This function defines our word cloud plot\n",
+    "# This was adapted from the wordcloud USER DOCUMENTATION\n",
+    "# URL: https://amueller.github.io/word_cloud/auto_examples/colored.html\n",
+    "\n",
     "def make_image_word_cloud(speech,image):\n",
     "    # put out\n",
     "    image_array = np.array(Image.open(image))\n",
@@ -155,6 +158,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
